fixed overflow issue; added space to page bottom

--- a/main.css
+++ b/main.css
@@ -4,27 +4,33 @@ html, body {
   font-size: 18px;
   margin: 0;
   padding: 0;
-  overflow: hidden;
   font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
   background-size: cover;
   background-image: radial-gradient(circle at center right, #fff, #ccc);
-  margin-bottom: 6rem;
 }
 
 #subtitle {
     padding-left: .6rem;
 }
 
+#flag {
+    font-size: 2rem;
+    padding-left: .6rem;
+}
+
 #wrapper {
     max-width: 40rem;
     margin: 0 auto;
-    height: 100%;
 }
 
 .flexy {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+}
+
+.empty-space {
+    height: 12rem;
 }
 
 p {
@@ -43,17 +49,6 @@ a, a:visited {
 a:hover, a:active {
     color: black;
     transform:translateY(-.3rem);
-}
-
-#flag {
-    font-size: 2rem;
-    padding-left: .6rem;
-}
-
-@media screen and (max-width: 1440px) {
-    #wrapper {
-        margin: 0 auto;
-    }
 }
 
 @media screen and (max-width: 900px) {
